CHD-1833 Framework-E upgrade (#486)
* CHD-1833 Framework-E upgrade

* fix review comments

* sonar fix